--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,8 @@
   chat-title="마동산"
   agent-id="8f01e74c-bae4-401c-8b5f-ec48eed2b6f2"
   language-code="ko"
+              
+  chat-icon="https://github.com/joeyongjun/ps-1/issues/14#issue-915966785"
 ></df-messenger>
     {% if site.google_analytics %}
       <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
